# RemitFlow

./: .gitignore  AGENTS.md  ANCHOR_REGISTRATION_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DOCKER_DEPLOYMENT_READY.md  DOCKER_FIX_SUMMARY.md  LICENSE  MAINTAINERS.md  PROJECT_PLAN.md  QWEN.md  README.md  RUN_LOCALLY.md  SECURITY.md  SETUP_COMPLETE.md  SUPPORT.md  TYPESCRIPT_FIX_SUMMARY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.qwen/: settings.json
backend/: .env.example  Dockerfile  README.md  eslint.config.js  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
database/: seed_test_data.sql
docker/: .dockerignore  .env.example  docker-compose.prod.yml  docker-compose.yml
docs/: ANCHOR_REGISTRATION_GUIDE.md  API.md  DEPLOYMENT.md  DEVELOPMENT.md  FREE_DEPLOYMENT.md  PRD.md  PRODUCTION_SETUP.md  ROADMAP.md  TROUBLESHOOTING.md
frontend/: Dockerfile  README.md  eslint.config.mjs  (+5 more)
smart-contracts/contracts/remitflow/: Cargo.toml
smart-contracts/contracts/remitflow/src/: admin.rs  anchor.rs  lib.rs  payment.rs  rates.rs
smart-contracts/contracts/remitflow/src/test/: mod.rs  test_anchor.rs  test_routing.rs
smart-contracts/contracts/remitflow/test_snapshots/test/: test_find_best_route_returns_none_when_no_routes.1.json  test_find_best_route_selects_lowest_fee.1.json  test_get_transaction_by_id.1.json  test_get_user_transactions.1.json  test_initialize_fails_if_called_twice.1.json  test_register_anchor_adds_to_list.1.json  test_stale_rate_returns_none.1.json  test_update_and_retrieve_rate.1.json
(+137 files in other folders)
